I changed style.css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     </header>
     
     <div class="container">
-        <nav>
-            <a href="#commands">Команди</a>
-            <a href="#formats">Формати_запитань</a>
-            <a href="#games">Ігри</a>
-            <a href="#marriage">Одруження</a>
-        </nav>
+        <div style="display: block;">
+            <nav>
+                <a href="#commands">Команди</a>
+                <a href="#formats">Формати_запитань</a>
+                <a href="#games">Ігри</a>
+                <a href="#marriage">Одруження</a>
+            </nav>
+        </div>
         
         <div class="content" id="commands">
             <h2>Commands</h2>
