--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
                 </ul>
             </p>
         </div>
-        <p>Також ти можеш просто розмовляти зі мно, питати як справи чи роказувати мені щось, бажаю приємного тобі спілкування</p>
-        <h5>Увага якщо ви помітили помилку, будь ласка зверніться в групу підтримки яка є закріплена у боті</h5>
+        <div class="content">
+            <p>Також ти можеш просто розмовляти зі мною, питати як справи чи роказувати мені щось, бажаю приємного тобі спілкування</p>
+            <h5>❗️Увага якщо ви помітили помилку, будь ласка зверніться в групу підтримки яка є закріплена у боті</h5>
+        </div>
     </div>
     
     <div class="footer">
